--- a/style.css
+++ b/style.css
@@ -13,3 +13,35 @@
             padding: 15px 32px;
             font-size: 20px;
             color: white;
+        }
+        #questionsDiv {
+            margin: 20px;
+        }
+
+        #currentTime {
+            float: right;
+        }
+
+        #goBack {
+            background-color: rgb(58, 128, 0);
+            position: relative;
+            padding: 10px;
+            font-size: 20px;
+            color: white;
+            top: 30%;
+            left: 55%;
+            width: auto;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        #clear {
+            background-color: rgb(58, 128, 0);
+            position: relative;
+            padding: 10px;
+            font-size: 20px;
+            color: white;
+            top: 30%;
+            right: 5%;
+            text-align: center;
+        }
