--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
         #wrapper {
-            position: absolute;
+            position: relative;
             left: 30%;
             top: 20%;
             width: 500px;
@@ -46,7 +46,9 @@
             text-align: center;
         }
         button {
+            background-color: aqua;
             border-radius: 8px;
+
         }
 
         textarea {
@@ -68,7 +70,7 @@
         input {
             margin-bottom: 20px;
             width: 50%;
-            border: 1px solid lightgray;
+            border: 1px solid rgb(9, 213, 236);
         }
 
         h1 {
@@ -90,7 +92,6 @@
         }
 
         /* Start media queries */
-        /* A Media Query max-width: 786px */
 @media screen and (max-width: 786px) {
     /* Resized content to fit 786px  */
         body {
@@ -127,7 +128,7 @@
         }
     /* sized main content to fit 640px  */
     #wrapper {
-        position: absolute;
+        position: relative;
         left: 10%;
     }
       a {
